--- a/src/styles/product-cart.css
+++ b/src/styles/product-cart.css
@@ -49,8 +49,24 @@
         padding: 20px;
     }
 
-    .addTOCart__btn {
+
+
+     
+}
+
+@media only screen and (max-width:768px) {
+    .addTOCART__btn{
         padding: 5px 15px;
-        font-size: 0.7rem;
+        font-size: 0.8rem;
+    }
+    .product__content h5 a{
+        font-size: 0.8rem;
+    }
+}
+
+@media only screen and (max-width:1000px) {
+    .addTOCART__btn {
+        padding: 5px 15px;
+        font-size: 0.8rem;
     }
 }
