--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,7 @@
     margin-top: 30px;
     padding: 20px 0px;
     border-radius: 8px;
+    display: flex;
 }
 
 .food__category button {
@@ -88,9 +89,11 @@
         margin-bottom: 0;
         ;
     }
-    .food__category{
-        padding: 15px;
-    }
+.food__category {
+ display: grid;
+ flex-direction: column;
+    
+}
         .food__category button{
             padding:5px 15px;
             font-size: 0.7rem;
