--- a/src/styles/product-detail.css
+++ b/src/styles/product-detail.css
@@ -47,7 +47,89 @@ border-bottom: 1px solid #fde4e4;
 .tab__active{
     color: #df2020;
 }
+.tab__review{
+    color: #212245;
+}
 .tab__content p {
     line-height: 20px;
     color: #212245;
+}
+.img__item{
+    cursor: pointer;
+}
+
+.form {
+    width: 60%;
+    background: #fde4e4;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.form__group{
+    margin-bottom: 20px;
+}
+
+.form__group input,
+.form__group textarea{
+
+    width: 50%;
+ 
+    
+
+}
+.user__email{
+    font-size: 0.8rem;
+}
+
+.user__name{
+    font-weight: 600;
+    color: #5b5fd3;
+}
+
+.feedback__text{
+    color: #212245;
+}
+.review{
+    text-align: start;
+}
+.submit{
+        border: none;
+            padding: 7px 25px;
+            background: #df2020;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 0.9rem;
+}
+.tabs{
+    margin-top: 20px;
+}
+
+
+@media only screen and (max-width:576px) {
+    .product__images{
+display: flex;
+flex-direction: row;
+    }
+}
+@media only screen and (max-width:768px){
+    .product__price{
+        font-size: 1rem;
+    }
+    .single__product-content{
+        padding-left:2px;
+    }
+    .category{
+        margin-bottom: 10px;
+    }
+    .form{
+        width: 100%;
+    }
+    .form__group input,
+    .form__group textarea {
+    
+        width: 100%;
+    
+    
+    
+    }
 }
